--- a/webapp-lunch-starter/pom.xml
+++ b/webapp-lunch-starter/pom.xml
@@ -57,11 +57,7 @@
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
+            <artifactId>slf4j-log4j12</artifactId>
         </dependency>
 
     </dependencies>
