--- a/autocode/pom.xml
+++ b/autocode/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>com.lzb.component</artifactId>
         <groupId>com.lzb.component</groupId>
+        <artifactId>component</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>com.lzb.compenent.autocode</artifactId>
+    <artifactId>autocode</artifactId>
 
     <properties>
         <velocity.version>1.7</velocity.version>
@@ -67,13 +67,13 @@
     </dependencies>
 
     <!--<build>-->
-        <!--<plugins>-->
-            <!--<plugin>-->
-                <!--<groupId>com.lzb.component</groupId>-->
-                <!--<artifactId>com.lzb.compenent.autocode</artifactId>-->
-                <!--<version>1.0.0-SNAPSHOT</version>-->
-            <!--</plugin>-->
-        <!--</plugins>-->
+    <!--<plugins>-->
+    <!--<plugin>-->
+    <!--<groupId>com.lzb.component</groupId>-->
+    <!--<artifactId>com.lzb.compenent.autocode</artifactId>-->
+    <!--<version>1.0.0-SNAPSHOT</version>-->
+    <!--</plugin>-->
+    <!--</plugins>-->
     <!--</build>-->
 
 
