--- a/common-lang/pom.xml
+++ b/common-lang/pom.xml
@@ -51,6 +51,16 @@
             <artifactId>xstream</artifactId>
             <version>1.4.3</version>
         </dependency>
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>1.6.2</version>
+        </dependency>
     </dependencies>
 
 </project>
