--- a/webapp-lunch/pom.xml
+++ b/webapp-lunch/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>webapp-lunch-starter</artifactId>
+    <artifactId>webapp-lunch</artifactId>
 
     <properties>
         <jetty.version>9.2.13.v20150730</jetty.version>
