--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>webapp-lunch</module>
         <module>core</module>
         <module>mvc</module>
+        <module>algorithm</module>
     </modules>
 
     <properties>
